# lcsc-code

./: CMakeLists.txt  Makefile  README.md
example/: simple_example.cpp
include/: lcsc.hpp
include/mc/: mc_intg.hpp  mdmc_intg.hpp
include/rng/: dist.hpp  distributions.hpp  lcrng.hpp  mt19937.hpp  rng.hpp  xorshift.hpp
include/test/: test.hpp
include/utils/: utils.hpp
src/: simple_rng_skeleton.cpp
src/mc/: mc_intg.cpp  mdmc_intg.cpp
src/rng/: distributions.cpp  lcrng.cpp  mt19937.cpp  xorshift.cpp
src/test/: test.cpp
src/utils/: utils.cpp
